--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,6 +31,7 @@
       <li>Fined £1,000
       </li>
     </ul>
+    <a class="govuk-body" href="cases">View prototype</a>
   </div>
 
   <div class="govuk-grid-column-one-third">
