--- a/app/views/arrange-a-session/confirmation.html
+++ b/app/views/arrange-a-session/confirmation.html
@@ -1,37 +1,38 @@
 {% extends "_wizard-page.html" %}
 {% set rearranging = data['arrange-a-session'][CRN][sessionId]['rearrange-or-cancel'] %}
 {% set buttonText = 'Finish' %}
-{% set title = "Session rearranged" if rearranging else "Session arranged" %}
+{% set title = "Appointment rearranged" if rearranging else "Appointment arranged" %}
 
 {% block page %}
-  {% set session = arrangedSession({
-    providerCode: data['provider-code'],
-    typeOfSession: data['arrange-a-session'][CRN][sessionId]['type-of-session'],
-    contactType: data['arrange-a-session'][CRN][sessionId]['other-type-of-session'],
-    date: data['arrange-a-session'][CRN][sessionId]['session-date'],
-    startTime: data['arrange-a-session'][CRN][sessionId]['session-start-time'],
-    endTime: data['arrange-a-session'][CRN][sessionId]['session-end-time'],
-    countsTowardsRAR: data['arrange-a-session'][CRN][sessionId]['session-counts-towards-rar'] == 'Yes',
-    rarCategory: data['arrange-a-session'][CRN][sessionId]['session-rar-category'],
-    rarSubCategory: data['arrange-a-session'][CRN][sessionId]['session-rar-subcategory'],
-    locationCode: data['arrange-a-session'][CRN][sessionId]['session-location-code']
-  }) %}
+{% set session = arrangedSession({
+providerCode: data['provider-code'],
+typeOfSession: data['arrange-a-session'][CRN][sessionId]['type-of-session'],
+contactType: data['arrange-a-session'][CRN][sessionId]['other-type-of-session'],
+date: data['arrange-a-session'][CRN][sessionId]['session-date'],
+startTime: data['arrange-a-session'][CRN][sessionId]['session-start-time'],
+endTime: data['arrange-a-session'][CRN][sessionId]['session-end-time'],
+countsTowardsRAR: data['arrange-a-session'][CRN][sessionId]['session-counts-towards-rar'] == 'Yes',
+rarCategory: data['arrange-a-session'][CRN][sessionId]['session-rar-category'],
+rarSubCategory: data['arrange-a-session'][CRN][sessionId]['session-rar-subcategory'],
+locationCode: data['arrange-a-session'][CRN][sessionId]['session-location-code']
+}) %}
 
-  {% set panelHtml %}
-    <strong>{{ session.summary.typeOfSession }}</strong><br />
-    {{ session.summary.date | dateWithDayAndWithoutYear }} from {{ session.summary.time }}
-  {% endset %}
+{% set panelHtml %}
+<strong>{{ session.summary.typeOfSession }}</strong><br />
+{{ session.summary.date | dateWithDayAndWithoutYear }} from {{ session.summary.time }}
+{% endset %}
 
-  {{ govukPanel({
-    titleText: title,
-    html: panelHtml
-  }) }}
+{{ govukPanel({
+titleText: title,
+html: panelHtml
+}) }}
 
-  <h2 class="govuk-heading-m govuk-!-margin-top-6">Next steps</h2>
-  <p class="govuk-body">
-    Add this session to your calendar.
-  </p>
-  <p class="govuk-body">
-    Give details of the session to {{ case.serviceUserPersonalDetails.firstName }}.<br>
-    {{ case.serviceUserPersonalDetails.firstName }}’s phone number is <strong>{{ case.serviceUserPersonalDetails.phone }}</strong>.</p>
+<h2 class="govuk-heading-m govuk-!-margin-top-6">Next steps</h2>
+<p class="govuk-body">
+  Add this appointment to your calendar.
+</p>
+<p class="govuk-body">
+  Give details of the appointment to {{ case.serviceUserPersonalDetails.firstName }}.<br>
+  {{ case.serviceUserPersonalDetails.firstName }}’s phone number is <strong>{{ case.serviceUserPersonalDetails.phone
+    }}</strong>.</p>
 {% endblock %}
