--- a/app/assets/sass/components/_app-card-one-third-column-list.scss
+++ b/app/assets/sass/components/_app-card-one-third-column-list.scss
@@ -1,16 +1,16 @@
 .app-card__one-third-column-list {
-  font-family: "GDS Transport", Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  width: 100%;
-  margin: 0 0 20px;
+  @include govuk-font($size: 16);
+  margin-bottom: govuk-spacing(4);
+}
+
+@media (min-width: 40.0625em) {
+  .app-card__one-third-column-list {
+    @include govuk-font($size: 19);
+  }
 }
 
 .app-card__one-third-column-list-item {
-  margin-bottom: 10px;
+  margin-bottom: govuk-spacing(2);
 }
 
 .app-card__one-third-column-list-key, .app-card__one-third-column-list-value {
@@ -23,11 +23,4 @@
 
 .app-card__one-third-column-list-value {
   margin: 0;
-}
-
-@media (min-width: 40.0625em) {
-  .app-card__one-third-column-list {
-    font-size: 19px;
-    line-height: 1.5;
-  }
 }
