--- a/app/views/case/address-book-professional.html
+++ b/app/views/case/address-book-professional.html
@@ -41,7 +41,9 @@
     {% set hr = joiner('<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">') %}
 
     {% for contact in case.professionalContacts %}
-      {{ hr() | safe }}
+      {% if loop.index != 1 %}
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+      {% endif %}
 
       <div class="govuk-!-margin-bottom-7">
         <h2 class="govuk-heading-m">{{ contact.name }}</h2>
