Add a page to route the type of thing to add, and add a button from the communication page

--- a/app/views/case/communication.html
+++ b/app/views/case/communication.html
@@ -29,6 +29,10 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-third">
+    <a href="/cases/{{ CRN }}/communication/add" role="button" draggable="false" class="govuk-button govuk-!-width-three-quarters" data-module="govuk-button">
+      Add communication
+    </a>
+
     <h3 class="govuk-heading-m">Categories</h3>
 
     <p class="govuk-body">
