--- a/app/views/cases/index.html
+++ b/app/views/cases/index.html
@@ -34,7 +34,7 @@ My cases
     </li>
     <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
       <a class="govuk-tabs__tab" href="recently-allocated">
-        Recently allocated (3)
+        Recently allocated ({{ data.cases.length }})
       </a>
     </li>
   </ul>
