Add other comm: allow picking a different recipient

--- a/app/views/add-other-communication/check.html
+++ b/app/views/add-other-communication/check.html
@@ -25,7 +25,7 @@
       },
       {
         key: { text: "To" },
-        value: { text: data['communication'][CRN][sessionId]['to'] }
+        value: { text: data['communication'][CRN][sessionId]['to'] if data['communication'][CRN][sessionId]['to'] !== 'Other' else data['communication'][CRN][sessionId]['other-to'] }
       },
       {
         key: { text: "Details" },
