Tweak spelling to bring in line with GOV.UK style guide

--- a/app/views/arrange-a-session/add-notes.html
+++ b/app/views/arrange-a-session/add-notes.html
@@ -16,7 +16,7 @@
            text: 'Yes'
          },
          {
-           text: 'No (Notes can be added later)'
+           text: 'No (notes can be added later)'
          }
        ]
        } | decorateFormAttributes(['communication', CRN, sessionId, 'add-notes']))
