Fix change link for notes

--- a/app/views/arrange-a-session/_session-details.html
+++ b/app/views/arrange-a-session/_session-details.html
@@ -115,7 +115,7 @@
       actions: {
         items: [
           {
-            href: arrangeSessionPath + "/rar",
+            href: arrangeSessionPath + "/notes",
             text: "Change",
             visuallyHiddenText: "appointment notes"
           }
