Allow changing appointment notes if the outcome has been recorded

--- a/app/views/confirm-attendance/_outcome-details.html
+++ b/app/views/confirm-attendance/_outcome-details.html
@@ -56,12 +56,12 @@
       actions: {
         items: [
           {
-            href: "notes",
+            href: notesEditPath or "notes",
             text: "Change",
             visuallyHiddenText: "appointment notes"
           }
         ]
-      } if showAction
+      } if showAction or notesEditPath
     },
     {
       key: { text: "Uploaded files" },
